# gstreamer-example

./: .gitignore  CMakeLists.txt  Dockerfile  do.sh  gen-frames.sh  main.cpp
